k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: space2study
  namespace: space2study

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
